css: update branding and fix fg/bg contrast issues

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,5 +1,5 @@
-$primary:   #687881;
-$secondary: #bbc8cf;
+$primary:   #4F5863;
+$secondary: #5f7886;
 
 $body: #f3f3f3;
 
